[~] Update field texture

--- a/css/field.css
+++ b/css/field.css
@@ -1,8 +1,10 @@
 #field {
     position: relative;
     border: 8px dashed #731104;
+    background: linear-gradient(90deg, #106813 10%, #1e6e22 10%),
+              linear-gradient(90deg, #1e6e22 10%, #106813 10%);
+    background-size: 10px 10px;
 }
-
 .controls button {
     width: 40px;
     height: 40px;
@@ -23,5 +25,5 @@
     transform: scale(0.9);
 }
 .controls input {
-    visibility: hidden;
+    display: none;
 }
