--- a/css/main.css
+++ b/css/main.css
@@ -2,4 +2,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 100vh;
+    justify-content: space-evenly;
 }
